feat: add stock level registration with product catalog validation
Implement comprehensive stock level management with:
- Set stock level endpoint with absolute quantity setting
- Product catalog integration for SKU validation
- Jackson snake_case naming strategy for API consistency
- Global exception handling with RFC 7807 ProblemDetail
- K6 simulation scripts for load testing stock initialization
- Batch stock update service for bulk operations
- Enhanced CloudEvents schema support
- Docker and deployment configurations
- Comprehensive documentation and OpenAPI specs

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>