@@ -1,9 +1,8 @@
 package com.paklog.inventory.domain.event;
 
+import com.paklog.inventory.application.dto.StockLevelChangedData;
 import com.paklog.inventory.domain.model.StockLevel;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 public class StockLevelChangedEvent extends DomainEvent {
@@ -49,16 +48,22 @@ public class StockLevelChangedEvent extends DomainEvent {
 
     @Override
     public Map<String, Object> getEventData() {
-        Map<String, Object> data = new HashMap<>();
-        data.put("sku", sku);
-        data.put("previousQuantityOnHand", previousStockLevel.getQuantityOnHand());
-        data.put("previousQuantityAllocated", previousStockLevel.getQuantityAllocated());
-        data.put("previousAvailableToPromise", previousStockLevel.getAvailableToPromise());
-        data.put("newQuantityOnHand", newStockLevel.getQuantityOnHand());
-        data.put("newQuantityAllocated", newStockLevel.getQuantityAllocated());
-        data.put("newAvailableToPromise", newStockLevel.getAvailableToPromise());
-        data.put("changeReason", changeReason);
-        return Collections.unmodifiableMap(data);
+        // Return the properly structured data matching AsyncAPI spec
+        // Use snake_case keys to match the AsyncAPI specification
+        StockLevelChangedData data = StockLevelChangedData.of(
+                sku,
+                previousStockLevel,
+                newStockLevel,
+                changeReason
+        );
+
+        // Use snake_case keys for the map - these will be preserved in JSON
+        return Map.of(
+                "sku", data.getSku(),
+                "previous_stock_level", data.getPreviousStockLevel(),
+                "new_stock_level", data.getNewStockLevel(),
+                "change_reason", data.getChangeReason()
+        );
     }
 
     public static Builder builder() { return new Builder(); }
